[package]
name = "mrn-generator"
version = "0.3.1"
edition = "2021"
authors = ["Pavlos Smith <paulsmith4561+at+gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
rand = "0.8.5"
clap = { version = "4.0.29", features = ["derive"] }
thiserror = "1.0.63"
anyhow = "1.0.86"
